Fixed pdf download icon alignment issue

--- a/resources/assets/admin/styles/entries.scss
+++ b/resources/assets/admin/styles/entries.scss
@@ -115,6 +115,10 @@ table.editor_table, .ff_entry_table_field, .ff-table {
     list-style: none;
     padding: 7px 0px;
     overflow: hidden;
+    .dashicons, 
+    .dashicons-before::before{
+      line-height: inherit;
+    }
     &:hover {
       background: #f7fafc;
     }
